<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StoneCottages</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="booking_button">Booking</string>
    <string name="photos_button">Photos</string>
    <string name="cottages_button">Cottages</string>
    <string name="farmhouse_image">Farmhouse Image</string>
    <string name="bach_image_string">Bach Image</string>
    <string name="cowshed_image_string">Cowshed Image</string>
    <string name="cottage_image_string">Cottage Image</string>
    <string name="lodge_image_string">Lodge Image</string>
    <string name="yurt_image_string">Yurt Image</string>
    <string name="home_button">Home</string>
    <string name="first_name">First Name</string>
    <string name="title">Title</string>
    <string name="select_title">Select Title</string>
    <string name="second_name">Second Name</string>
    <string name="address_1">Address Line 1</string>
    <string name="address_2">Address Line 2</string>
    <string name="city_town">City/Town</string>
    <string name="post_code">Post Code</string>
    <string name="email">Email</string>
    <string name="cottage">Cottage</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="submit">Submit</string>
    <string name="phone_number_string">Phone Number</string>
    <string name="action_about">About</string>
    <string name="cottage_description">Fill with description of cottage</string>
    <string name="bach_description">description for bach</string>
    <string name="cowshed_description">description for cowshed</string>
    <string name="farmhouse_description">farmhouse description</string>
    <string name="description_lodge">description of lodge</string>
    <string name="decription_yurt">description of yurt</string>

</resources>
