<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleSpinner"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:id="@+id/firstName"
        android:inputType="textPersonName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_name"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/secondName"
        android:inputType="textPersonName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_string"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/phone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_1"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/address1"
        android:inputType="textPostalAddress"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_2"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/address2"
        android:inputType="textPostalAddress"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_town"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/city_town"
        android:inputType="textPostalAddress"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_code"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/post_code"
        android:inputType="textPostalAddress"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/email_address"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cottage"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cottageSpinner"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"/>
    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        style="@android:style/Widget.DatePicker"
        android:calendarViewShown="false"
        android:clickable="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"/>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker2"
        style="@android:style/Widget.DatePicker" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submitButton"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/error_message"
           />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cottages_button"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:background="#a5edd6e8"
                    android:onClick="openCottages"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/home_button"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:onClick="openHome"
                    android:background="#a5edd6e8" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/photos_button"
                    android:padding="0dp"
                    android:onClick="openPhotos"
                    android:layout_weight="1"
                    android:background="#a5edd6e8" />



            </TableRow>


        </RelativeLayout>
    <!--
    add date time picker
    -->


    <!-- <DatePicker
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/datePicker" /> -->

    <!--
    Add date time picker
    -->
    </LinearLayout>
</ScrollView>