<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <ImageView
        android:layout_width="500px"
        android:layout_height="500px"
        android:layout_marginLeft="500px"
        android:id="@+id/imageView5"
        android:src="@drawable/bach"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:text="@string/bach_description"
        android:textAlignment="center"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:padding="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/cottages_button"
            android:id="@+id/cottageButton"
            android:padding="0dp"
            android:onClick="openCottages"
            android:layout_weight="1"
            android:background="#a5edd6e8" />


        <Button
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:text="@string/booking_button"
            android:onClick="openBooking"
            android:id="@+id/bookingButton"
            android:background="#a5edd6e8" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/photos_button"
            android:padding="0dp"
            android:layout_weight="1"
            android:id="@+id/photosButton"
            android:background="#a5edd6e8"
            android:onClick="openPhotos"/>


    </TableRow>
</RelativeLayout>