<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"  tools:context=".MainActivity">


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:padding="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/cottages_button"
            android:id="@+id/cottageButton"
            android:padding="0dp"
            android:layout_weight="1"
            android:textColor="#FFF"
            android:background="#591610ff" />


        <Button
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:text="@string/booking_button"
            android:textColor="#FFF"

            android:id="@+id/bookingButton"
            android:background="#93ed2b13" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/photos_button"
            android:padding="0dp"
            android:textColor="#FFF"
            android:layout_weight="1"
            android:id="@+id/photosButton"
            android:background="#8d28ed16" />


    </TableRow>
</RelativeLayout>
