<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">




<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/farmhouse"
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:contentDescription="@string/farmhouse_image"
            android:layout_weight="1.16"
            android:padding="5dp"
            android:onClick="openFarmhouse"
            android:id="@+id/imageView" />

        <ImageView
            android:layout_height="190dp"
            android:layout_width="wrap_content"
            android:contentDescription="@string/bach_image_string"
            android:src="@drawable/bach"
            android:layout_weight="1.16"
            android:padding="5dp"/>
                <ImageView
                    android:layout_height="190dp"
                    android:layout_width="wrap_content"
                    android:src="@drawable/cowshed"
                    android:contentDescription="@string/cowshed_image_string"
                    android:layout_alignTop="@+id/imageView3"
                    android:layout_toRightOf="@+id/imageView2"
                    android:layout_toEndOf="@+id/imageView2"
                    android:padding="5dp"
                    android:layout_weight="1.16"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="190dp"
                    android:src="@drawable/cottage"
                    android:contentDescription="@string/cottage_image_string"
                    android:layout_toEndOf="@+id/imageView2"
                    android:id="@+id/imageView3"
                    android:layout_below="@+id/imageView2"
                    android:layout_toRightOf="@+id/imageView2"
                    android:padding="5dp"
                    android:layout_weight="1.16"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="190dp"
                    android:src="@drawable/lodge"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imageView"
                    android:layout_toEndOf="@+id/imageView"
                    android:id="@+id/imageView4"
                    android:padding="5dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="190dp"
                    android:src="@drawable/yurt"
                    android:layout_toEndOf="@+id/imageView"
                    android:layout_toRightOf="@+id/imageView"
                    android:id="@+id/imageView2"
                    android:layout_below="@+id/imageView2"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:padding="5dp"/>



</TableLayout>
</ScrollView>


